# python-ai_agent

./: .gitignore  LICENSE  README.md  pyproject.toml
Introduction/: test1.py  test10.py  test11.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  档案.txt  账本.csv
advanced/: .env  config_env.py  openai_async_stream.py  openai_sync_demo.py
langChain/: first.py  lcel.py  output_parser.py  prompts.py
langChain/RAG/: rag_basic.py  rag_contextualCompressionRetriever.py  rag_embeddingsFilter.py  rag_ensembleRetriever.py  rag_longContextReorder.py  rag_mmr.py  rag_multiQueryRetriever.py  rag_multiVectorRetriever.py  rag_parentDocumentRetriever.py  rag_selfQueryRetriever.py  vector_storage.py
langChain/RAG/chroma_db/: chroma.sqlite3
langChain/agent/: collaboration_agents.py  exception.py  first_demo.py  handwriting_reAct_agent.py  interrupt.py  log.py  memory.py  tool.py  toolkit.py
streamlit/: cache.py  chart.py  form.py  helloworld.py  input.py  layout.py  progress.py  session_state.py  text_and_dataDisplay.py
streamlit/.streamlit/: config.toml
